--- a/messages.html
+++ b/messages.html
@@ -16,6 +16,29 @@
                 <img src="images/bell.png" alt="Bell Icon">
             </a>
             <div class="newMessages" id="circle"></div>
+            <div class="threeNewMessages">
+                <div class="message">
+                    <img src="images/avatar_max.jpg" class="avatar">
+                    <div class="message-content">
+                        <p class="username">User name</p>
+                        <p class="text">Text message</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <img src="images/avatar_max.jpg" class="avatar">
+                    <div class="message-content">
+                        <p class="username">User name</p>
+                        <p class="text">Text message</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <img src="images/avatar_max.jpg" class="avatar">
+                    <div class="message-content">
+                        <p class="username">User name</p>
+                        <p class="text">Text message</p>
+                    </div>
+                </div>
+            </div>            
         </div>
         <div class="profile">
             <img src="images/avatar_max.jpg">
