--- a/students.html
+++ b/students.html
@@ -102,7 +102,7 @@
         <div class="table">
             <table id="tableOfStudents">
                 <tr>
-                    <th class="checkboxColumn"><input type="checkbox" id="mainCheckbox" onclick="checkAll()"></th>
+                    <th class="checkboxColumn"><input type="checkbox" id="mainCheckbox" onclick="checkAll()" title="Click All"></th>
                     <th>Group</th>
                     <th>Name</th>
                     <th>Gender</th>
