--- a/students.html
+++ b/students.html
@@ -103,7 +103,7 @@
             <table id="tableOfStudents">
                 <tr>
                     <th class="checkboxColumn" aria-label="Checkboxes">
-                        <label for="mainCheckbox">Select All</label>
+                        <label for="mainCheckbox"></label>
                         <input type="checkbox" id="mainCheckbox" onclick="checkAll()" title="Click All">
                     </th>
                     <th>Group</th>
