--- a/students.html
+++ b/students.html
@@ -102,8 +102,8 @@
         <div class="table">
             <table id="tableOfStudents">
                 <tr>
-                    <th class="checkboxColumn" aria-label="Checkboxes">
-                        <label for="mainCheckbox"></label>
+                    <th class="checkboxColumn">
+                        <label for="mainCheckbox" class="sr-only">Checkboxes</label>
                         <input type="checkbox" id="mainCheckbox" onclick="checkAll()" title="Click All">
                     </th>
                     <th>Group</th>
