--- a/students.html
+++ b/students.html
@@ -6,6 +6,9 @@
     <meta name="author" content="Max Skydanchuk">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/students.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
+
     <title>Students</title>
 </head>
 <body>
