Update before total changes

--- a/students.html
+++ b/students.html
@@ -125,6 +125,7 @@
                 </form>
             </div>            
         </div>
+        <div class="overlay" id="overlayDelete" onclick="closeDeleteModal()"></div>
         <div class="table">
             <table id="tableOfStudents">
                 <tr>
@@ -163,7 +164,7 @@
             <button class="arrow right">&raquo;</button>
         </div>
     </main>
-    <script src="js/main.js"></script>
     <script src="js/students.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
